<resources>
    <string name="app_name">MilestoneApp</string>
    <string name="title">マイルストーン一覧</string>
    <string name="btn_milestone">マイルストーン</string>
    <string name="add_milestone">追加</string>

    <string name="add">マイルストーンの追加</string>
    <string name="add_title">タイトル</string>
    <string name="add_information">詳細</string>
    <string name="add_date">日程</string>
    <string name="example_title">会議</string>
    <string name="example_information">アオイ商事様と7/8(木)に行ったBS研修の振り返り</string>
    <string name="example_date">2023/7/22</string>

    <string name="noTitle">現在マイルストーンはありません</string>
</resources>