<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity"
    android:orientation="vertical"
    android:gravity="center"
    tools:ignore="UsingOnClickInXml">

    <TextView
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/add"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/addTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_title"
        android:layout_marginTop="60dp"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/editText"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:inputType="text"
        android:hint="@string/example_title"
        android:background="@drawable/edittext_flame"
        android:layout_marginTop="6dp"/>

    <TextView
        android:id="@+id/addInformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_information"
        android:layout_marginTop="20dp"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/editInformation"
        android:layout_width="300dp"
        android:layout_height="210dp"
        android:layout_marginTop="6dp"
        android:hint="@string/example_information"
        android:background="@drawable/edittext_flame"
        android:inputType="text" />

    <TextView
        android:id="@+id/addDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_date"
        android:layout_marginTop="20dp"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/editDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:hint="@string/example_date"
        android:background="@drawable/edittext_flame"
        android:inputType="date" />

    <Button
        android:id="@+id/addBack"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="6dp"
        android:text="@string/add_milestone"
        android:onClick="backToMilestone"/>


</LinearLayout>
