<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center"
    tools:ignore="UsingOnClickInXml">

    <TextView
        android:id="@+id/titleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="22sp"/>

    <Button
        android:id="@+id/Milestone1"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="80dp"
        android:onClick="checkDetails"
        android:text="@string/btn_milestone" />

    <Button
        android:id="@+id/Milestone2"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="6dp"
        android:onClick="checkDetails"
        android:text="@string/btn_milestone" />

    <Button
        android:id="@+id/Milestone3"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="@string/btn_milestone"
        android:layout_marginTop="6dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:onClick="checkDetails"/>

    <Button
        android:id="@+id/Milestone4"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="6dp"
        android:onClick="checkDetails"
        android:text="@string/btn_milestone"/>

    <Button
        android:id="@+id/add"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="6dp"
        android:text="@string/add_milestone"
        android:onClick="addMilestone"/>

</LinearLayout>